Add loop to get data from multiple videos

--- a/yt_comments_data.ipynb
+++ b/yt_comments_data.ipynb
@@ -20,13 +20,14 @@
     "2) ~~Make function that can pull comments using video ID~~\n",
     "3) ~~Make function that adds relevant parts of reponse to a list of dictionaries~~\n",
     "4) Get video ids necessary\n",
-    "5) Iterate through ids and use created functions to generate DF\n",
+    "5) ~~Iterate through ids and use created functions to generate DF~~\n",
     "6) Import DF to CSV\n",
     "\n",
     "Notes:\n",
     "* Google allows 10000 units on their quota; listing comments uses 1 unit but when testing check this\n",
-    "* Listing comments has a max value of 100 - assuming each video has at least 100 comments, should result in 15,000 comments\n",
-    "* However might not be able to filter language here so less than that"
+    "* Listing comments has a max value of 100 - assuming each video has at least 100 comments, should result in 15,000 comments + replies\n",
+    "* However might not be able to filter language here so less than that\n",
+    "* While YouTube search can be used to get video_id data, quota cost is high"
    ]
   },
   {
@@ -39,7 +40,8 @@
     "import os\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "from googleapiclient.discovery import build"
+    "from googleapiclient.discovery import build\n",
+    "from time import sleep"
    ]
   },
   {
@@ -75,9 +77,12 @@
     "        order='relevance',\n",
     "        videoId=video_id\n",
     "    )\n",
-    "    response = request.execute()\n",
-    "    \n",
-    "    return response"
+    "    try:\n",
+    "        response = request.execute()\n",
+    "        \n",
+    "        return response\n",
+    "    except:\n",
+    "        return None"
    ]
   },
   {
@@ -94,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad7a36ce",
+   "id": "bae66f71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9edaca1",
+   "id": "119c3c12",
    "metadata": {
     "scrolled": true
    },
@@ -116,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdf81170",
+   "id": "a34c07c1",
    "metadata": {},
    "source": [
     "## Making the function to add to a DF\n",
@@ -134,9 +139,6 @@
     "{channel_id: [video_ids]}\n",
     "\n",
     "Columns desired for DataFrame:\n",
-    "* comment_id \n",
-    "    * top-level: response['items'][i]['snippet']['topLevelComment']['id']\n",
-    "    * reply: response['items'][i]['replies']['comments'][i]['id]\n",
     "* channel - from dictionary used to iterate through\n",
     "* video_id - from dictionary used to iterate through\n",
     "* text\n",
@@ -150,11 +152,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "999bfe8a",
+   "id": "68390be7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_info(response):\n",
+    "def extract_info(response, youtuber, video_id):\n",
     "    \n",
     "    comment_data = []\n",
     "    comment_thread = response['items']\n",
@@ -163,42 +165,98 @@
     "        \n",
     "        # Grab the top-level comment first\n",
     "        comment_data.append({\n",
-    "            'comment_id': item['snippet']['topLevelComment']['id'],\n",
-    "            'channel': 'placeholder',\n",
-    "            'video_id': 'placeholder',\n",
+    "            'channel': youtuber,\n",
+    "            'video_id': video_id,\n",
     "            'text': item['snippet']['topLevelComment']['snippet']['textOriginal'],\n",
     "            'date_published': item['snippet']['topLevelComment']['snippet']['publishedAt']\n",
     "        })\n",
     "        \n",
     "        # Check if there are replies and get same info if there are\n",
-    "        if item['snippet']['totalReplyCount']:\n",
+    "        if 'replies' in item.keys():\n",
     "            \n",
     "            replies = item['replies']['comments']\n",
-    "            \n",
+    "\n",
     "            for reply in replies:\n",
-    "                \n",
+    "\n",
     "                comment_data.append({\n",
-    "                    'comment_id': reply['id'],\n",
-    "                    'channel': 'placeholder',\n",
-    "                    'video_id': 'placeholder',\n",
+    "                    'channel': youtuber,\n",
+    "                    'video_id': video_id,\n",
     "                    'text': reply['snippet']['textOriginal'],\n",
     "                    'date_published': reply['snippet']['publishedAt']\n",
     "                })\n",
     "        \n",
-    "    return comment_data"
+    "    return pd.DataFrame(comment_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f71f00e",
+   "id": "1995ce09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = extract_info(test_response)\n",
-    "print(len(test_data))\n",
-    "test_data"
+    "# Dictionary of YouTube Channels and top 10 videos\n",
+    "youtubers = {'Junya Official Channel': ['4V0UAhe8o5c', '0dGh2KWJd84', 'c10am2Y1xfo', 'dYgIyCtyVXM', 'uHxJDYjzuVs',\n",
+    "                                        'KnxxMhLcO2Q', 'C8GtKZDXTAk', 'YKqX_ABcI_M', '6C9P1q3oon4', 'wcCNqumbM-I'],\n",
+    "             'Sagawa /さがわ': ['VVrM6JOX6gA', 'hSv5eJKniaQ', 'rSsqD1usaBM', 'zhnElWMuT0w', 'uWw8sfnZjIo',\n",
+    "                               'a7ViRAx1iE0', 'FmyncJTqaQ', 'j5aR4-Bj1aE', 'nGGI_luJsO0', 'xe9XiS9AtNk']}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e16c16b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a DataFrame to store data\n",
+    "comments_df = pd.DataFrame(columns=['channel',\n",
+    "                                    'video_id',\n",
+    "                                    'text',\n",
+    "                                    'date_published'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ec1a119",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through youtubers to add data to DF\n",
+    "for youtuber, videos in youtubers.items():\n",
+    "    \n",
+    "    print(f'Getting comments for channel: {youtuber}')\n",
+    "          \n",
+    "    for video in videos:\n",
+    "        \n",
+    "        # Query the YouTube Data API\n",
+    "        response = retrieve_comments(video)\n",
+    "        sleep(3)\n",
+    "        \n",
+    "        # Add the data from the response to the DF\n",
+    "        if response:\n",
+    "            data = extract_info(response, youtuber=youtuber, video_id=video)\n",
+    "            comments_df = pd.concat([comments_df, data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de56cfb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c174da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
