Retrieve comment info into CSV format

--- a/yt_comments_data.ipynb
+++ b/yt_comments_data.ipynb
@@ -7,27 +7,7 @@
    "source": [
     "# YouTube Comments via YouTube API\n",
     "\n",
-    "This notebook utilizes Google's YouTube Data API to generate a dataset of YouTube comments from the top 15 YouTube channels by subscriber count in Japan on each channel's top 10 most viewed videos and outputs the data to a CSV."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8dad3758",
-   "metadata": {},
-   "source": [
-    "To Do:\n",
-    "1) ~~Check for successful request from API~~\n",
-    "2) ~~Make function that can pull comments using video ID~~\n",
-    "3) ~~Make function that adds relevant parts of reponse to a list of dictionaries~~\n",
-    "4) Get video ids necessary\n",
-    "5) ~~Iterate through ids and use created functions to generate DF~~\n",
-    "6) Import DF to CSV\n",
-    "\n",
-    "Notes:\n",
-    "* Google allows 10000 units on their quota; listing comments uses 1 unit but when testing check this\n",
-    "* Listing comments has a max value of 100 - assuming each video has at least 100 comments, should result in 15,000 comments + replies\n",
-    "* However might not be able to filter language here so less than that\n",
-    "* While YouTube search can be used to get video_id data, quota cost is high"
+    "This notebook utilizes Google's YouTube Data API to generate a dataset of YouTube comments from Japanese language videos that are trending in the region. It takes up to 250 videos depending on how many videos in the most popular chart for the region are categorized as being in the language to increase chances that comments on the video are in Japanese. From each video, up to 100 comments are grabbed along with all their replies."
    ]
   },
   {
@@ -41,6 +21,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from googleapiclient.discovery import build\n",
+    "from pathlib import Path\n",
     "from time import sleep"
    ]
   },
@@ -59,6 +40,17 @@
     "youtube = build(\n",
     "    'youtube', 'v3', developerKey=API_KEY\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35817e44",
+   "metadata": {},
+   "source": [
+    "## Retrieve comments from YouTube\n",
+    "\n",
+    "commentThreads() with 'snippet,replies' pulls comments and all their replies from a specified videoId.\n",
+    "- order='relevance' gets comments with lots of likes, which are more likely to have replies"
    ]
   },
   {
@@ -92,31 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_response = retrieve_comments(video_id='4V0UAhe8o5c')\n",
-    "test_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bae66f71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_response['items'][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "119c3c12",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print(len(test_response['items'][1]['replies']['comments']))\n",
-    "test_response['items'][1]['replies']['comments']"
+    "# For testing\n",
+    "# test_response = retrieve_comments(video_id='4V0UAhe8o5c')\n",
+    "# test_response"
    ]
   },
   {
@@ -124,29 +94,15 @@
    "id": "a34c07c1",
    "metadata": {},
    "source": [
-    "## Making the function to add to a DF\n",
+    "## Writing comment data to a Pandas DF\n",
     "\n",
-    "1) Create empty list\n",
-    "2) Iterate through response['items']\n",
-    "3) Create dictionary to hold top level comment\n",
-    "4) Add dictionary\n",
-    "5) Check for replies - if response['items][i]['snippet']['totalReplyCount']\n",
-    "6) Iterate through replies\n",
-    "7) Create empty dictionary for each reply\n",
-    "8) Add information from snippet\n",
+    "Takes in a response from an API call and a dictionary containing information about the video. Returns a dataframe created from a list of dictionaries that contain:\n",
     "\n",
-    "When running through the response, will use a dictionary:\n",
-    "{channel_id: [video_ids]}\n",
-    "\n",
-    "Columns desired for DataFrame:\n",
-    "* channel - from dictionary used to iterate through\n",
-    "* video_id - from dictionary used to iterate through\n",
-    "* text\n",
-    "    * top-level: response['items'][i]['snippet']['topLevelComment']['snippet']['textOriginal']\n",
-    "    * reply: response['items'][i]['replies']['comments'][i]['snippet']['textOriginal']\n",
-    "* date_published\n",
-    "    * top-level: response['items'][i]['snippet']['topLevelComment']['snippet']['publishedAt']\n",
-    "    * reply: response['items'][i]['replies']['comments'][i]['snippet']['publishedAt']"
+    "* channel - the channel's title\n",
+    "* video_id - YouTube's unique identifier of the video\n",
+    "* category_id - YouTube id that classifies what the content of the video is about\n",
+    "* text - original text of the comment before any edits\n",
+    "* date_published - date when the comment was made"
    ]
   },
   {
@@ -156,31 +112,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_info(response, youtuber, video_id):\n",
+    "def extract_info(response, video):\n",
     "    \n",
     "    comment_data = []\n",
-    "    comment_thread = response['items']\n",
     "    \n",
-    "    for item in comment_thread:\n",
+    "    for item in response['items']:\n",
     "        \n",
     "        # Grab the top-level comment first\n",
     "        comment_data.append({\n",
-    "            'channel': youtuber,\n",
-    "            'video_id': video_id,\n",
+    "            'channel': video['channel'],\n",
+    "            'video_id': video['video_id'],\n",
+    "            'category_id': video['category_id'],\n",
     "            'text': item['snippet']['topLevelComment']['snippet']['textOriginal'],\n",
     "            'date_published': item['snippet']['topLevelComment']['snippet']['publishedAt']\n",
     "        })\n",
     "        \n",
     "        # Check if there are replies and get same info if there are\n",
     "        if 'replies' in item.keys():\n",
-    "            \n",
-    "            replies = item['replies']['comments']\n",
     "\n",
-    "            for reply in replies:\n",
+    "            for reply in item['replies']['comments']:\n",
     "\n",
     "                comment_data.append({\n",
-    "                    'channel': youtuber,\n",
-    "                    'video_id': video_id,\n",
+    "                    'channel': video['channel'],\n",
+    "                    'video_id': video['video_id'],\n",
+    "                    'category_id': video['category_id'],\n",
     "                    'text': reply['snippet']['textOriginal'],\n",
     "                    'date_published': reply['snippet']['publishedAt']\n",
     "                })\n",
@@ -189,17 +144,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "782bec67",
+   "metadata": {},
+   "source": [
+    "## Retrieve popular videos\n",
+    "\n",
+    "videos().list() method with chart='mostPopular' generates a resource that has information about the currrently trending videos within a region.\n",
+    "\n",
+    "There is a limit on the amount of videos displayed in the response but within the results is a token is given that can generate the next page of results. The function accepts this token as a parameter, which when combined with a loop allows for all the results to be retrieved up to the maximum specified."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1995ce09",
+   "id": "918a844b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dictionary of YouTube Channels and top 10 videos\n",
-    "youtubers = {'Junya Official Channel': ['4V0UAhe8o5c', '0dGh2KWJd84', 'c10am2Y1xfo', 'dYgIyCtyVXM', 'uHxJDYjzuVs',\n",
-    "                                        'KnxxMhLcO2Q', 'C8GtKZDXTAk', 'YKqX_ABcI_M', '6C9P1q3oon4', 'wcCNqumbM-I'],\n",
-    "             'Sagawa /さがわ': ['VVrM6JOX6gA', 'hSv5eJKniaQ', 'rSsqD1usaBM', 'zhnElWMuT0w', 'uWw8sfnZjIo',\n",
-    "                               'a7ViRAx1iE0', 'FmyncJTqaQ', 'j5aR4-Bj1aE', 'nGGI_luJsO0', 'xe9XiS9AtNk']}"
+    "def retrieve_videos(next_page=''):\n",
+    "    request = youtube.videos().list(\n",
+    "        part='snippet',\n",
+    "        chart='mostPopular',\n",
+    "        maxResults=250,\n",
+    "        pageToken=next_page,\n",
+    "        regionCode='JP',\n",
+    "    )\n",
+    "    response = request.execute()\n",
+    " \n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "854d132d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_videos(response):\n",
+    "    \n",
+    "    for item in response['items']:\n",
+    "        \n",
+    "        snippet = item['snippet']\n",
+    "        \n",
+    "        if (snippet.get('defaultLanguage') == 'ja' or\n",
+    "            snippet.get('defaultAudioLanguage') == 'ja'):\n",
+    "      \n",
+    "            videos.append({\n",
+    "                'video_id': item['id'],\n",
+    "                'channel': snippet['channelTitle'],\n",
+    "                'category_id': snippet['categoryId']\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f195d5fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make list\n",
+    "videos = []\n",
+    "\n",
+    "# Run once to generate first page\n",
+    "response = retrieve_videos('')\n",
+    "next_page = response['nextPageToken']\n",
+    "list_videos(response)\n",
+    "\n",
+    "# Loop until there is no nextPageToken\n",
+    "try:\n",
+    "    while next_page:\n",
+    "        response = retrieve_videos(next_page)\n",
+    "        next_page = response['nextPageToken']\n",
+    "        list_videos(response)\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3125bfcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check list of videos\n",
+    "videos"
    ]
   },
   {
@@ -212,6 +244,7 @@
     "# Initialize a DataFrame to store data\n",
     "comments_df = pd.DataFrame(columns=['channel',\n",
     "                                    'video_id',\n",
+    "                                    'category_id',\n",
     "                                    'text',\n",
     "                                    'date_published'])"
    ]
@@ -223,21 +256,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loop through youtubers to add data to DF\n",
-    "for youtuber, videos in youtubers.items():\n",
+    "# Loop through videos list       \n",
+    "for video in videos:\n",
     "    \n",
-    "    print(f'Getting comments for channel: {youtuber}')\n",
-    "          \n",
-    "    for video in videos:\n",
-    "        \n",
-    "        # Query the YouTube Data API\n",
-    "        response = retrieve_comments(video)\n",
-    "        sleep(3)\n",
-    "        \n",
-    "        # Add the data from the response to the DF\n",
-    "        if response:\n",
-    "            data = extract_info(response, youtuber=youtuber, video_id=video)\n",
-    "            comments_df = pd.concat([comments_df, data])"
+    "    # Query the YouTube Data API\n",
+    "    response = retrieve_comments(video['video_id'], max_results=100)\n",
+    "    sleep(3)\n",
+    "\n",
+    "    # Add the data from the response to the DF\n",
+    "    if response:\n",
+    "        data = extract_info(response, video)\n",
+    "        comments_df = pd.concat([comments_df, data])"
    ]
   },
   {
@@ -247,6 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check DF\n",
     "comments_df"
    ]
   },
@@ -256,7 +286,11 @@
    "id": "b6c174da",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export the comment data to a CSV file\n",
+    "output_path = Path('Resources/youtube_comments.csv')\n",
+    "comments_df.to_csv(output_path)"
+   ]
   }
  ],
  "metadata": {
